--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 # Info from: https://github.com/gitpod-samples/template-dotnet-core-cli-csharp/blob/master/.gitpod.yml 
 #   &  https://www.gitpod.io/docs/introduction/languages/dotnet
-image: gitpod/workspace-dotnet-vnc:latest
+image: gitpod/workspace-dotnet:latest
 
 # tasks:
 #   - name: Restore & Build
