--- a/13 - Integrating Via Http and Rest/PPPDDD.REST.SocialMedia/Discovery.Reccommendations.Followers/Discovery.Reccommendations.Followers.csproj
+++ b/13 - Integrating Via Http and Rest/PPPDDD.REST.SocialMedia/Discovery.Reccommendations.Followers/Discovery.Reccommendations.Followers.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Discovery.Reccommendations.Followers</RootNamespace>
     <AssemblyName>Discovery.Reccommendations.Followers</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -53,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
