--- a/21 - Repositories/DDDPPP.Chap21.NHibernateExample/DDDPPP.Chap21.NHibernateExample.Presentation/App.config
+++ b/21 - Repositories/DDDPPP.Chap21.NHibernateExample/DDDPPP.Chap21.NHibernateExample.Presentation/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <configSections>
-    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate"/>
   </configSections>
   
   <startup> 
-      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
 
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
