fully working entity framework 6 and migrations to seed db!

--- a/21 - Repositories/DDDPPP.Chap21.NHibernateExample/DDDPPP.Chap21.NHibernateExample.Presentation/App.config
+++ b/21 - Repositories/DDDPPP.Chap21.NHibernateExample/DDDPPP.Chap21.NHibernateExample.Presentation/App.config
@@ -13,8 +13,8 @@
     <session-factory name="NHibernate.Test">
       <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
       <property name="connection.connection_string">
-        Data Source=.\SQLEXPRESS;Database=AuctionExample;Trusted_Connection=True;
-      </property>
+		  Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=msdb;Integrated Security=True
+	  </property>
       <property name="adonet.batch_size">10</property>
       <property name="show_sql">false</property>
       <property name="dialect">NHibernate.Dialect.MsSql2005Dialect</property>
