--- a/21 - Repositories/DDDPPP.Chap21.EFExample/DDDPPP.Chap21.EFExample.Presentation/App.config
+++ b/21 - Repositories/DDDPPP.Chap21.EFExample/DDDPPP.Chap21.EFExample.Presentation/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="AuctionDatabaseContext" connectionString="Data Source=.\sqlexpress;Initial Catalog=AuctionExample;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="AuctionDatabaseContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=AuctionDB;Integrated Security=True;" providerName="System.Data.SqlClient"></add>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -13,7 +13,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
 </configuration>
